--- a/5_config_builder/ios xrd/xrd-1-startup.cfg
+++ b/5_config_builder/ios xrd/xrd-1-startup.cfg
@@ -166,5 +166,14 @@ username cisco
 !
 ssh server v2
 line default transport input ssh
+!
+netconf-yang agent
+ ssh
+!
+netconf agent tty
+!
+ssh server vrf default
+ssh server netconf vrf default
+!
 end
 
